# rime-data-streaming-iot

./: LICENSE  README.md
benchmarks/: README.md
benchmarks/notebooks/baseline-paper/: baseline-throughput-latency-paper.ipynb
benchmarks/notebooks/failure-recovery/: failure_recovery_latency.ipynb
benchmarks/notebooks/maintenance/: maintenance-paper-rerun-all-topos.ipynb  maintenance-paper.ipynb
benchmarks/notebooks/query-dissemination/: query-analysis.ipynb
benchmarks/notebooks/throughput+latency/: throughput_latency-paper.ipynb
code/: README.md
code/baseline-system/: CMakeLists.txt  README.md
code/baseline-system/app/: main.cpp
code/baseline-system/include/: srt_config.hpp
code/baseline-system/include/custom_types/: net_init.hpp  node_address.hpp  node_info.hpp  query.hpp  results.hpp
code/baseline-system/include/log/: logger.hpp
code/baseline-system/include/networking/: network_manager.hpp
code/baseline-system/include/sensors/: sensor_location.hpp  sensor_random.hpp  sensor_state.hpp
code/baseline-system/include/utility/: find_node_info.hpp
code/baseline-system/src/: base_station.cpp  srt_config.cpp
code/baseline-system/src/custom_types/: attribute.cpp  net_init.cpp  node_address.cpp  node_info.cpp  query.cpp  results.cpp
code/baseline-system/src/log/: logger.cpp
code/baseline-system/src/networking/: network_manager.cpp
code/baseline-system/src/sensors/: sensor_location.cpp  sensor_random.cpp  sensor_state_location.cpp
code/rime/: CMakeLists.txt  Dockerfile.rime  Dockerfile.rime-stage
code/rime/app/: main.cpp
code/rime/cmake/: FindCAF.cmake
code/rime/include/: base_station.hpp  srt_config.hpp
code/rime/run/: README.md  build_logical_tree.py  build_tree_topology.py  create-log-volume.sh  experiment_args_parser.py  run-experiment.sh
code/rime/src/: base_station.cpp  srt_config.cpp
paper/: .gitignore  Makefile  bifold-bibtex.bib  citations.bib  main.tex  main.xwm  main_no_dashes_at_repeated_names.bib
paper/chapters/: abstract.tex  acknowledgements.tex  author-bios.tex  background.tex  conclusion.tex  design.tex  evaluation.tex  future-work.tex  intro.tex  related-work.tex  semantic-routing.tex
paper/img/TU_Logo_lang_rot_Print/: TU_Logo_lang_Pantone_rot1797_coated.eps
paper/img/algorithms/: parent_selection_algorithm.tex
paper/img/basic-srts/: basic_srt-1.tex  basic_srt.tex
paper/img/sequence-diagrams/: rime_init.asta
paper/img/state-exchange/: pub_sub_exchange.tex  srt_exchange.tex
paper/img/template/: basic_tree-tickz-only.tex
paper/img/vliot-basic-srt/: vliot-basic-srt.tex
paper/img/vliot-rime-architecture/: vliot-rime-architecture.tex
paper/template/: AnonymousPerson.eps  LogoRonPub.eps  paper.tex  references.bib  ronpub.cls
(+50 files in other folders)
